# jormungandr

./: CLAUDE.md  README.md  index.html  pyproject.toml
src/jormungandr/: __init__.py  core.py  retry.py  transforms.py  validators.py
tests/: test_core.py  test_transforms.py  test_validators.py
